add endpoint api /patch/avatar
